[package]
name = "textdisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusttype = "0.9.3"
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }

[lib]
path = "src/lib.rs"

[[bin]]
name="textdisp"
path="src/main.rs"
